fix styles for scrollbars on diff. browser

--- a/kanban-frondend/src/index.html
+++ b/kanban-frondend/src/index.html
@@ -16,7 +16,7 @@
 
   <script>
     document.addEventListener("DOMContentLoaded", function() {
-        // Browser-Erkennung und Klassen hinzufügen
+        // detect browser and sets the right class for scrollbar design
         let userAgent = navigator.userAgent;
         var isFirefox = typeof InstallTrigger !== 'undefined';
 
